--- a/studytimeboard/templates/about.html
+++ b/studytimeboard/templates/about.html
@@ -22,6 +22,11 @@
             show today's study king and his study event stream;
             leaderboard of one week in home page differ from today and not today;
             leaderboard of one week in leaderboard page improved to show each weekday.</li>
+        <li>Beta v0.4.8:
+            Database update;
+            User experience improvement on home page, spinner for request handling;
+            display current studying users;
+        </li>
     </ul>
 
 </div>
