--- a/studytimeboard/templates/home.html
+++ b/studytimeboard/templates/home.html
@@ -52,7 +52,7 @@
                 <div class="row">
                     <div class="input-group mb-5 ml-3 mr-3">
                         <div></div>
-                        <input type="text" class="form-control" placeholder="Type here your username" name="username">
+                        <input type="text" class="form-control" placeholder="Type here your username (* must)" name="username">
                     </div>
                 </div>
                 {% endif %}
