--- a/studytimeboard/templates/about.html
+++ b/studytimeboard/templates/about.html
@@ -27,6 +27,10 @@
             User experience improvement on home page, spinner for request handling;
             display current studying users;
         </li>
+        <li>Beta v0.4.9:
+            Database update, true user system with registering enabled;
+            Codebase refactored, enable faster start-dev;
+        </li>
     </ul>
 
 </div>
