input varify for duration

--- a/studytimeboard/templates/about.html
+++ b/studytimeboard/templates/about.html
@@ -31,6 +31,10 @@
             Database update, true user system with registering enabled;
             Codebase refactored, enable faster start-dev;
         </li>
+        <li>Beta v0.5.0:
+            Personal analysis page update, new charts;
+            Add simple user input varificaiton
+        </li>
     </ul>
 
 </div>
