--- a/backend/studytimeboard/templates/layout.html
+++ b/backend/studytimeboard/templates/layout.html
@@ -56,8 +56,8 @@
                 <a class="nav-item nav-link" href="{{ url_for('analysis') }}">Personal Analysis</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                 {% else %}
-                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                <a class="nav-item nav-link" >Login</a>
+                <a class="nav-item nav-link" >Register</a>
                 {% endif %}
             </div>
 
